--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue 3 + Tailwind CSS</title>
+    <title>Vine.js Guider</title>
     <link
       rel="preload"
       href="/font/Inter-roman.var.woff2"
@@ -13,6 +13,7 @@
     />
     <!-- <link rel="preload" href="/font/Inter-italic.var.woff2" as="font" type="font/woff2" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="/font/inter.css" />
+    <link rel="icon" href="/favicon.png" />
   </head>
   <body>
     <div id="app"></div>
